z-index fixed nav dropdown

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@ body {
   display: block;
   display: flex;
   margin: -50px auto 20px auto;
+  z-index: 100;
 }
 
 .navigation {
@@ -386,7 +387,7 @@ footer {
     display: inline-block;
     float: left;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
   }
 
   .menu-slider {
